--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Episodes</h3>
-              <h4>70</h4>
+              <h4>75</h4>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -587,6 +587,22 @@
               <img src="assets/img/guests/SharifQamar.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Sharif Qamar<br>Asst Manager, TERI</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/ManjunathSekhar.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Manjunath Sekhar<br>Head, Sustainable Mobility, GIZ</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/SrikanthNarasimhan.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Srikanth Narasimhan<br>Founder, Bengaluru Navanirmana Party</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
