--- a/index.html
+++ b/index.html
@@ -384,6 +384,14 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
+              <img src="assets/img/guests/HariMarar.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Hari Marar <br>MD & CEO, Bengaluru International Airport Ltd.</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
               <img src="assets/img/guests/ashwinmahesh.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Ashwin Mahesh <br>Founder, Lvbl</p>
@@ -426,7 +434,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/revathyashok.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Revathy Ashok <br>CEO, BPAC</p>
+                <p class="gslide-title text-center">Revathy Ashok <br>CEO, Bengaluru Political Action Committee</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -434,7 +442,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/rajcherubal.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Raj Cherubal <br>UNDP</p>
+                <p class="gslide-title text-center">Raj Cherubal <br>United Nations Development Programme</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -458,7 +466,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/pawanmulukutla.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Pawan Mulukutla <br>Director, WRI</p>
+                <p class="gslide-title text-center">Pawan Mulukutla <br>Director, World Resources Institute</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -474,7 +482,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/amitbhatt.webp" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Amit Bhatt <br>MD, ICCT</p>
+                <p class="gslide-title text-center">Amit Bhatt <br>MD, International Council on Clean Transportation</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -498,7 +506,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/srinualavilli.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Srinivas Alavilli <br>Fellow, WRI</p>
+                <p class="gslide-title text-center">Srinivas Alavilli <br>Fellow, World Resources Institute</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -514,7 +522,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ravigadepalli.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Ravi Gadepalli, <br>Consultant, World Bank & ADB</p>
+                <p class="gslide-title text-center">Ravi Gadepalli, <br>Consultant, World Bank & Asian Development Bank</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -538,7 +546,7 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ashishverma.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Ashish Verma <br>Head, IISC, IST Lab</p>
+                <p class="gslide-title text-center">Ashish Verma <br>Head, Indian Institute of Science Sustainable Transportation Lab</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
