--- a/index.html
+++ b/index.html
@@ -440,17 +440,25 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/rajcherubal.jpg" class="img-fluid" alt="">
+              <img src="assets/img/guests/srikanthvishwanathan.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Raj Cherubal <br>United Nations Development Programme</p>
+                <p class="gslide-title text-center">Srikanth Vishwanathan <br>CEO, Janaagraha</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/srikanthvishwanathan.jpg" class="img-fluid" alt="">
+              <img src="assets/img/guests/MadhavPai.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Srikanth Vishwanathan <br>CEO, Janaagraha</p>
+                <p class="gslide-title text-center">Madhav Pai <br>CEO, WRI India</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/rajcherubal.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Raj Cherubal <br>United Nations Development Programme</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
