--- a/index.html
+++ b/index.html
@@ -150,35 +150,35 @@
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Episodes</h3>
-              <h4>86</h4>
+              <h4>95</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Guests</h3>
-              <h4>70</h4>
+              <h4>80</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Views</h3>
-              <h4>130K</h4>
+              <h4>150K</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Subscribers</h3>
-              <h4>3.6K</h4>
+              <h4>3.8K</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Hours watched</h3>
-              <h4>8K</h4>
+              <h4>8.2K</h4>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -400,6 +400,14 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
+              <img src="assets/img/guests/JaganShah.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Jagan Shah<br>CEO, Infravision</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
               <img src="assets/img/guests/anjalikmohan.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Anjali Mohan <br>Partner, INDE</p>
@@ -536,17 +544,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/satyaarikutharam.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/guests/DivyaNarayanan.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Satya Arikutharam <br>Transport Consultant</p>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/guests/amitgupta.jpeg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Amit Gupta <br>CEO, Yulu</p>
+                <p class="gslide-title text-center">Divya Narayanan <br>CEO, Jhatkaa.org</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -619,6 +619,46 @@
               <img src="assets/img/guests/SrikanthNarasimhan.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Srikanth Narasimhan<br>Founder, Bengaluru Navanirmana Party</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/RajivPrakash.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Rajiv Prakash <br>Advisor, Rainmatter Foundation</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/VinaySreenivasa.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Vinay Sreenivasa<br>Researcher, Alternate Law Forum</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/amitgupta.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Amit Gupta <br>CEO, Yulu</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/ArunMurugesh.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Arun Murugesh <br>Vice President, Sales, Saahas Zero Waste</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/satyaarikutharam.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Satya Arikutharam <br>Transport Consultant</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
