--- a/index.html
+++ b/index.html
@@ -632,9 +632,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/VinaySreenivasa.jpg" class="img-fluid" alt="">
+              <img src="assets/img/guests/VenkataChunduru.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Vinay Sreenivasa<br>Researcher, Alternate Law Forum</p>
+                <p class="gslide-title text-center">Venkata Chunduru<br>CEO, Arcadis / IBI</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -650,7 +650,31 @@
             <div class="gallery-item h-100">
               <img src="assets/img/guests/ArunMurugesh.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Arun Murugesh <br>Vice President, Sales, Saahas Zero Waste</p>
+                <p class="gslide-title text-center">Arun Murugesh <br>Vice President, Saahas Zero Waste</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/SriramKuchimanchi.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Sriram Kuchimanchi <br>CEO, Smarter Dharma</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/arjitsoni.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Arjit Soni<br>CEO, MyByk</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/VinaySreenivasa.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Vinay Sreenivasa<br>Researcher, Alternate Law Forum</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -659,6 +683,30 @@
               <img src="assets/img/guests/satyaarikutharam.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Satya Arikutharam <br>Transport Consultant</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/JennyPinto.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Jenny Pinto<br>Founder, Oorjaa Sustainable Lighting</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/RajKumarDugar.jpeg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Rajkumar Dugar<br>Citizens for Citizens</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/SarangYadwadkar.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Sarang Yadwadkar<br>Architect & Civic Activist, Pune</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
