--- a/index.html
+++ b/index.html
@@ -150,14 +150,14 @@
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Episodes</h3>
-              <h4>95</h4>
+              <h4>100</h4>
             </div>
           </div><!-- End Pricing Item -->
 
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Guests</h3>
-              <h4>80</h4>
+              <h4>90</h4>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -171,7 +171,7 @@
           <div class="col-lg-6">
             <div class="pricing-item d-flex justify-content-between">
               <h3>Subscribers</h3>
-              <h4>3.8K</h4>
+              <h4>4K</h4>
             </div>
           </div><!-- End Pricing Item -->
 
@@ -392,9 +392,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/ashwinmahesh.jpeg" class="img-fluid" alt="">
+              <img src="assets/img/guests/anjalikmohan.png" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Ashwin Mahesh <br>Founder, Lvbl</p>
+                <p class="gslide-title text-center">Anjali Mohan <br>Partner, INDE</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -408,9 +408,9 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
-              <img src="assets/img/guests/anjalikmohan.png" class="img-fluid" alt="">
+              <img src="assets/img/guests/ashwinmahesh.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Anjali Mohan <br>Partner, INDE</p>
+                <p class="gslide-title text-center">Ashwin Mahesh <br>Founder, Lvbl</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -608,9 +608,33 @@
           </div><!-- End Gallery Item -->
           <div class="col-xl-3 col-lg-4 col-md-6">
             <div class="gallery-item h-100">
+              <img src="assets/img/guests/manikp.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Manikandan KP<br>Housing Consultant, PMAY, WB, ADB</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
               <img src="assets/img/guests/ManjunathSekhar.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Manjunath Sekhar<br>Head, Sustainable Mobility, GIZ</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/JennyPinto.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Jenny Pinto<br>Founder, Oorjaa Sustainable Lighting</p>
+              </div>
+            </div>
+          </div><!-- End Gallery Item -->
+          <div class="col-xl-3 col-lg-4 col-md-6">
+            <div class="gallery-item h-100">
+              <img src="assets/img/guests/VenkataChunduru.jpg" class="img-fluid" alt="">
+              <div class="gallery-links d-flex align-items-center justify-content-center">
+                <p class="gslide-title text-center">Venkata Chunduru<br>CEO, Arcadis / IBI</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -627,14 +651,6 @@
               <img src="assets/img/guests/RajivPrakash.jpg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Rajiv Prakash <br>Advisor, Rainmatter Foundation</p>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/guests/VenkataChunduru.jpg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Venkata Chunduru<br>CEO, Arcadis / IBI</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
@@ -683,14 +699,6 @@
               <img src="assets/img/guests/satyaarikutharam.jpeg" class="img-fluid" alt="">
               <div class="gallery-links d-flex align-items-center justify-content-center">
                 <p class="gslide-title text-center">Satya Arikutharam <br>Transport Consultant</p>
-              </div>
-            </div>
-          </div><!-- End Gallery Item -->
-          <div class="col-xl-3 col-lg-4 col-md-6">
-            <div class="gallery-item h-100">
-              <img src="assets/img/guests/JennyPinto.jpg" class="img-fluid" alt="">
-              <div class="gallery-links d-flex align-items-center justify-content-center">
-                <p class="gslide-title text-center">Jenny Pinto<br>Founder, Oorjaa Sustainable Lighting</p>
               </div>
             </div>
           </div><!-- End Gallery Item -->
